--- a/gallerie.css
+++ b/gallerie.css
@@ -40,12 +40,10 @@ div.gallerie-loading {
 	position: relative;
 	top: 0px;
 	left: 0px;
-	margin: 2% 0px 0px 0px;
+	margin: 20px 0px;
 }
 
 .gallerie-imagebox img {
-	max-width: 95%;
-	max-height: 95%;
 	position: absolute;
 	top: 0px;
 	bottom: 0px;
@@ -54,6 +52,12 @@ div.gallerie-loading {
 	margin: auto;
 	border: 4px solid white;
 	border-radius: 5px;
+	
+	transition: all 500ms;
+		-webkit-transition: all 500ms;
+		-moz-transition: all 500ms;
+		-ms-transition: all 500ms;
+		-o-transition: all 500ms;
 }
 
 .gallerie-imagebox:after { 
